--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ a {
   /*padding-bottom: 70px;*/
 }
 
+/* bootstrap navbar and i are battling but i'll do that some other time*/
+
 nav {
   background-color: #7ae2de;
   color: #EEE7E8;
@@ -42,7 +44,7 @@ nav {
 
 .nav-link {
   padding: 10px 30px;
-  color: #EEE7E8;
+  color: #ffffff;
   transition: 0.3s;
 }
 
@@ -119,6 +121,25 @@ code {
   border-radius: 10px;
 }
 
-.mosaic .row {
+.mosaic .col-sm-4 {
   padding-top: 2vh;
+}
+
+.idea-select + .btn-outline-primary {
+    background-color: white;
+    border-color: #e05547;
+    color: #e05547;
+    border-radius: 0px;
+    border-bottom: none;
+}
+
+.idea-select:checked + .btn-outline-primary {
+    color: white;
+    background-color: #e05547;
+    border-color: #e05547;
+}
+
+#project-idea {
+  border: 5px solid #e05547;
+  padding: 2vh;
 }
