--- a/style.css
+++ b/style.css
@@ -163,6 +163,14 @@ code {
 }
 
 h4 {
+  font-weight: 500;
+}
+
+h2 {
+  font-weight: 600;
+  text-align: center;
+}
+h3 {
   font-weight: 600;
 }
 /* i should probably separate these out at some point :( */
